bicep/arm-templates/WBA/nsg01.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
      "networkSecurityGroups_amlaibatchnsg_name": {
          "defaultValue": "amlaibatchnsg",
          "type": "String"
      }
  },
  "variables": {},
  "resources": [
      {
          "type": "Microsoft.Network/networkSecurityGroups",
          "apiVersion": "2020-11-01",
          "name": "[parameters('networkSecurityGroups_amlaibatchnsg_name')]",
          "location": "eastus2",
          "tags": {
              "DeptName": "Infrastructure",
              "LOB": "Infrastructure",
              "Deployer": "Rajasekhar.Padala@boots.co.uk",
              "DeployDate": "2020-06-10",
              "Sensitivity": "Non-Sensitive",
              "SenType": "Not Applicable",
              "EnvType": "Non-Production",
              "LegalSubEntity": "Walgreen Co",
              "SubDivision": "Global Cloud & Platform Service",
              "Department": "Cloud COE",
              "CostCenter": "Project LEAP 5001"
          },
          "properties": {
              "securityRules": [
                  {
                      "name": "AzureBatch",
                      "properties": {
                          "description": "AzureBatch",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "29876-29877",
                          "sourceAddressPrefix": "BatchNodeManagement",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 1040,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "AzureMachineLearning",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "44224",
                          "sourceAddressPrefix": "AzureMachineLearning",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 1050,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "AAD",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "AzureActiveDirectory",
                          "access": "Allow",
                          "priority": 3700,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "ARM",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "AzureResourceManager",
                          "access": "Allow",
                          "priority": 3800,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "AML",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "AzureMachineLearning",
                          "access": "Allow",
                          "priority": 3850,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "ACR",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "AzureContainerRegistry.EastUS2",
                          "access": "Allow",
                          "priority": 3900,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Storage",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "Storage.EastUS2",
                          "access": "Allow",
                          "priority": 3950,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  }
              ]
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "[concat(parameters('networkSecurityGroups_amlaibatchnsg_name'), '/AAD')]",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_amlaibatchnsg_name'))]"
          ],
          "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureActiveDirectory",
              "access": "Allow",
              "priority": 3700,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "[concat(parameters('networkSecurityGroups_amlaibatchnsg_name'), '/ACR')]",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_amlaibatchnsg_name'))]"
          ],
          "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureContainerRegistry.EastUS2",
              "access": "Allow",
              "priority": 3900,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "[concat(parameters('networkSecurityGroups_amlaibatchnsg_name'), '/AML')]",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_amlaibatchnsg_name'))]"
          ],
          "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureMachineLearning",
              "access": "Allow",
              "priority": 3850,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "[concat(parameters('networkSecurityGroups_amlaibatchnsg_name'), '/ARM')]",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_amlaibatchnsg_name'))]"
          ],
          "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureResourceManager",
              "access": "Allow",
              "priority": 3800,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "[concat(parameters('networkSecurityGroups_amlaibatchnsg_name'), '/AzureBatch')]",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_amlaibatchnsg_name'))]"
          ],
          "properties": {
              "description": "AzureBatch",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "29876-29877",
              "sourceAddressPrefix": "BatchNodeManagement",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "[concat(parameters('networkSecurityGroups_amlaibatchnsg_name'), '/AzureMachineLearning')]",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_amlaibatchnsg_name'))]"
          ],
          "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "44224",
              "sourceAddressPrefix": "AzureMachineLearning",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1050,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "[concat(parameters('networkSecurityGroups_amlaibatchnsg_name'), '/Storage')]",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_amlaibatchnsg_name'))]"
          ],
          "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Storage.EastUS2",
              "access": "Allow",
              "priority": 3950,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      }
  ]
}
